# rrmcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
docker/: docker-compose.dev.yml
docs/: architecture.md  redmine-api.md
src/: config.rs  error.rs  main.rs
src/redmine/: common.rs  issues.rs  mod.rs  projects.rs
src/tools/: mod.rs  projects.rs
