[package]
name = "rrmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
rmcp = { version = "1.1.0", features = ["transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
